fixed input field

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-                    <label for="email" class="userName">Username </label>
+                    <label for="email" class="userName">Username: </label>
 
                     <input type="text & email" required id="email">
                     <span class="user">
@@ -38,7 +38,7 @@
 
 
                     </span>
-                    <label for="pass"> password</label>
+                    <label for="pass"> password:</label>
                     <input type="password" required id="pass">
                     <span class="lock">
                         <i class="fa-solid fa-lock" style="color: white; "></i>
