--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="lock">
                         <i class="fa-solid fa-lock" style="color: white; "></i>
                     </span>
-                    <div class="remember-me">
+                    <!-- <div class="remember-me">
                         <span class="checkbox-remember-me">
 
                             <input type="checkbox" id="Remember me">
@@ -41,7 +41,7 @@
                         <span class="forgot-password">
                             <a href="#">Forgot Password</a>
                         </span>
-                    </div>
+                    </div> -->
                     <button class="btn" role="button">Login</button>
                     <div class="not-have-account-line">
                         <a href="#">Don't have an account? Register </a>
@@ -53,7 +53,7 @@
     <!-- HTML !-->
 
 
-
+<script src="app.js"></script>
 </body>
 
 </html>
