--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -18,12 +20,12 @@
             <form action="">
                 <div class="item">
                     <div class="login-cap">
-                        <h1>
+                        <h1 id="top">
                             Login
                         </h1>
                     </div>
                     <label for="email" class="userName">Username: </label>
-                    <input type="text & email" required id="email">
+                    <input type="email" required id="email">
                     <span class="user">
                         <i class="fa-regular fa-user fa fa-light" style="color: white;"></i>
                     </span>
@@ -32,7 +34,7 @@
                     <span class="lock">
                         <i class="fa-solid fa-lock" style="color: white; "></i>
                     </span>
-                    <!-- <div class="remember-me">
+                    <div class="remember-me">
                         <span class="checkbox-remember-me">
 
                             <input type="checkbox" id="Remember me">
@@ -41,19 +43,21 @@
                         <span class="forgot-password">
                             <a href="#">Forgot Password</a>
                         </span>
-                    </div> -->
-                    <button class="btn" role="button">Login</button>
+                    </div>
+                    <button class="btn" onclick="login()" role="button"><span class="spinner-border" id="loader"></span> <span id="loginText">Login</span></button>
                     <div class="not-have-account-line">
                         <a href="#">Don't have an account? Register </a>
+                    </div>
+                    <div id="loginInfo">
+
                     </div>
                 </div>
             </form>
         </div>
     </div>
-    <!-- HTML !-->
 
-
-<script src="app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
